# agentku

./: .gitignore  agentku-mac.py  agentku-windows.py  agentku-windows.spec  agentku.iss  composer.json  config.json  fix_detail.patch  fix_detail.py  fix_layout.py  package-lock.json
.github/workflows/: build-windows.yml
agentku-windows/: Cargo.toml
agentku-windows/src/: main.rs
app/Console/Commands/: CheckBillingStatus.php
app/Events/: AgentDataReceived.php
app/Http/Controllers/: AuthController.php  DepartmentController.php  EmployeeController.php  PlanController.php  TenantController.php
app/Http/Middleware/: CheckPlanActive.php  InitializeTenancyByAuthUser.php
app/Models/: Employee.php  EmployeeScreenshot.php  Plan.php  SecurityAlert.php  Tenant.php  User.php
bootstrap/: app.php
config/: cache.php  tenancy.php
database/migrations/: 2026_07_09_073125_add_tenant_id_to_users_table.php  2026_07_10_041532_create_plans_table.php  2026_07_10_042501_add_duration_days_to_plans_table.php
database/migrations/tenant/: 2026_07_10_072213_create_employees_table.php  2026_07_16_130236_add_device_token_to_employees_table.php  2026_07_19_121659_create_security_alerts_table.php  2026_07_19_121700_create_employee_screenshots_table.php
database/seeders/: DatabaseSeeder.php  PlanSeeder.php  RoleSeeder.php  UserSeeder.php
public/: app.js  style.css
resources/views/: detail.blade.php  welcome.blade.php
resources/views/auth/: login.blade.php  register.blade.php
resources/views/client/: dashboard.blade.php  (+2 more)
routes/: api.php  console.php  tenant.php  web.php
(+13 files in other folders)
